--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="bg-dark p-4">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                       </li>
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="#spozywka">Artykuły spożywcze</a>
