--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                       <a class="nav-link active" aria-current="page" href="#spozywka">Artykuły spożywcze</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Owoce i Warzywa</a>
+                      <a class="nav-link" href="#owoce">Owoce i Warzywa</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#chemia">Chemia</a>
